tests/v2_validation/cattlevalidationtest/core/resources/k8s/ingress_8.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress8
  annotations:
   http.port: "91"

spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          serviceName: k8test8-one
          servicePort: 81
  - host: bar.foo.com
    http:
      paths:
      - backend:
          serviceName: k8test8-two
          servicePort: 80
